[package]
name = "rusty_samurai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
teloxide = { version = "0.12", features = ["macros", "full"] }
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
simple-log = "1.6.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
lingua = "1.5.0"
rustrict = "0.7.7"
rust-i18n = "2.1.0"